Updated visuals of the explosion system